--- a/src/framework/common/index.html
+++ b/src/framework/common/index.html
@@ -24,8 +24,8 @@
   //页面进入时获取相关参数，防止直接进入首页
   var URL_hash = window.location.hash
   if (isMobile()) {
-    window.location.href = '/mobile'+ URL_hash
+    window.location.href = '/mobile.html'+ URL_hash
   } else {
-    window.location.href = '/pc'+ URL_hash
+    window.location.href = '/pc.html'+ URL_hash
   }
 </script>
