--- a/src/framework/common/index.html
+++ b/src/framework/common/index.html
@@ -22,7 +22,7 @@
     return flag
   }
   //页面进入时获取相关参数，防止直接进入首页
-  // var URL_hash = window.location.hash
+  var URL_hash = window.location.hash
   // if (isMobile()) {
   //   window.location.href = '/mobile.html'+ URL_hash
   // } else {
